PJ-668 minicart z-index fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/cart/_minicart.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/cart/_minicart.scss
@@ -2,6 +2,7 @@
         position: absolute !important;
         top: 55px;
         right: 10px;
+        z-index: 999;
 }
 
 .header-right__minicart {
@@ -9,6 +10,7 @@
         position: absolute;
         top: 55px;
         right: 10px;
+        z-index: 999;
     }
 }
 
